--- a/ConferenceDude.Client.Tests/ConferenceDude.Client.Tests.csproj
+++ b/ConferenceDude.Client.Tests/ConferenceDude.Client.Tests.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="FluentAssertions" Version="5.10.3" />
     <PackageReference Include="NBuilder" Version="6.1.0" />
     <PackageReference Include="NUnit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.16.1" />
@@ -14,6 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\ConferenceDude.Client\ConferenceDude.Client.csproj" />
     <ProjectReference Include="..\ConferenceDude.Domain\ConferenceDude.Domain.csproj" />
   </ItemGroup>
 
