Introducing domain with MSpec unittests

--- a/ConferenceDude.Client/ConferenceDude.Client.csproj
+++ b/ConferenceDude.Client/ConferenceDude.Client.csproj
@@ -6,4 +6,8 @@
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\ConferenceDude.Domain\ConferenceDude.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
