--- a/ConferenceDude.Server/appsettings.json
+++ b/ConferenceDude.Server/appsettings.json
@@ -1,4 +1,5 @@
 {
+  "StorageConnectionString": "DataSource=App_Data/conference.db",
   "Logging": {
     "LogLevel": {
       "Default": "Information",
